changement in CMakeLists.txt to compile on Windows

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,3 +7,8 @@ add_executable(server TCP/server.c
         TCP/serverFunction.c
         TCP/serverFunction.h)
 add_executable(client TCP/client.c)
+
+if (WIN32)
+    target_link_libraries(server ws2_32)
+    target_link_libraries(client ws2_32)
+endif()
