--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,9 @@ set(CMAKE_C_STANDARD 11)
 add_executable(server TCP/server.c
         TCP/serverFunction.c
         TCP/serverFunction.h)
-add_executable(client TCP/client.c)
+add_executable(client TCP/client.c
+        TCP/clientFunction.c
+        TCP/clientFunction.h)
 
 if (WIN32)
     target_link_libraries(server ws2_32)
